# backend

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
server/apps/contributors/: apps.py  models.py  serializers.py  views.py
server/apps/contributors/migrations/: 0001_initial.py
server/apps/gallery/: models.py  serializers.py  views.py
server/apps/gallery/migrations/: 0001_initial.py
server/apps/posts/: models.py  paginations.py  serializers.py  views.py
server/apps/posts/migrations/: 0001_initial.py
server/apps/students/: models.py  serializers.py  views.py
server/apps/students/migrations/: 0001_initial.py
server/config/: settings.py  urls.py
